// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VinylCover (Todo 19 — spinning vinyl) > renders the paused disc structure (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="relative aspect-square h-full"
    data-cover="vinyl"
    data-testid="amuse-cover"
  >
    <div
      class="relative h-full w-full transform-gpu"
      data-spin-direction="clockwise"
      data-spin-frame-rate="60"
      data-spin-period-seconds="8.571428571428571"
      data-spin-settle-epsilon-deg="0.05"
      data-spin-smoothing="0.05"
      data-spin-start-delay-ms="500"
      data-spin-target-deg-per-frame="0.7"
      data-spinning="false"
      data-testid="amuse-vinyl-disc"
      style="transform-origin: center center;"
    >
      <div
        class="relative z-50"
      >
        <div
          class="aspect-square h-full"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="relative flex aspect-square items-center justify-center overflow-hidden"
              data-testid="amuse-vinyl-center"
              style="border-radius: 3.5rem; -webkit-mask-image: radial-gradient(circle, transparent 5.5%, black 5.5%); mask-image: radial-gradient(circle, transparent 5.5%, black 5.5%);"
            >
              <div
                class="absolute inset-0"
                data-testid="amuse-vinyl-center-art"
                style="background-image: url("https://example.test/album.png"); background-position: center center; background-repeat: no-repeat; background-size: cover;"
              />
              <div
                class="relative flex h-full w-full scale-[101%] transform-gpu items-center justify-center overflow-hidden"
              />
              <div
                class="absolute h-[20%] w-[20%] rounded-full"
                data-testid="amuse-vinyl-center-hole"
                style="background-color: rgb(255, 255, 255);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute inset-0 overflow-hidden blur-md brightness-150"
        data-cover-glow="false"
        data-testid="amuse-cover-glow"
        style="opacity: 0; border-radius: 3.5rem;"
      >
        <div
          class="absolute inset-0"
          data-testid="amuse-cover-glow-image"
          style="background-image: url("https://example.test/album.png"); background-position: center center; background-repeat: no-repeat; background-size: cover;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VinylCover (Todo 19 — spinning vinyl) > renders the playing disc structure (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="relative aspect-square h-full"
    data-cover="vinyl"
    data-testid="amuse-cover"
  >
    <div
      class="relative h-full w-full transform-gpu"
      data-spin-direction="clockwise"
      data-spin-frame-rate="60"
      data-spin-period-seconds="8.571428571428571"
      data-spin-settle-epsilon-deg="0.05"
      data-spin-smoothing="0.05"
      data-spin-start-delay-ms="500"
      data-spin-target-deg-per-frame="0.7"
      data-spinning="true"
      data-testid="amuse-vinyl-disc"
      style="transform-origin: center center;"
    >
      <div
        class="relative z-50"
      >
        <div
          class="aspect-square h-full"
        >
          <div
            class="relative h-full w-full"
          >
            <div
              class="relative flex aspect-square items-center justify-center overflow-hidden"
              data-testid="amuse-vinyl-center"
              style="border-radius: 3.5rem; -webkit-mask-image: radial-gradient(circle, transparent 5.5%, black 5.5%); mask-image: radial-gradient(circle, transparent 5.5%, black 5.5%);"
            >
              <div
                class="absolute inset-0"
                data-testid="amuse-vinyl-center-art"
                style="background-image: url("https://example.test/album.png"); background-position: center center; background-repeat: no-repeat; background-size: cover;"
              />
              <div
                class="relative flex h-full w-full scale-[101%] transform-gpu items-center justify-center overflow-hidden"
              />
              <div
                class="absolute h-[20%] w-[20%] rounded-full"
                data-testid="amuse-vinyl-center-hole"
                style="background-color: rgb(255, 255, 255);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="absolute inset-0 overflow-hidden blur-md brightness-150"
        data-cover-glow="true"
        data-testid="amuse-cover-glow"
        style="opacity: 1; border-radius: 3.5rem;"
      >
        <div
          class="absolute inset-0"
          data-testid="amuse-cover-glow-image"
          style="background-image: url("https://example.test/album.png"); background-position: center center; background-repeat: no-repeat; background-size: cover;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
